@@ -19,11 +19,14 @@ HFILE_GLOB=$(top_srcdir)/src/*.h
 CFILE_GLOB=$(top_srcdir)/src/*.c $(top_srcdir)/src/*.h
 
 # Headers to ignore
-IGNORE_HFILES= 			\
-	cairo-features.h	\
-	cairo-ft-private.h	\
-	cairo-win32-private.h	\
-	cairoint.h		\
+IGNORE_HFILES= 				\
+	cairo-features.h		\
+	cairo-ft-private.h		\
+	cairo-gstate-private.h		\
+	cairo-path-fixed-private.h 	\
+	cairo-private.h			\
+	cairo-win32-private.h		\
+	cairoint.h			\
 	cairo-wideint.h
 
 # CFLAGS and LDFLAGS for compiling scan program. Only needed
