@@ -17,6 +17,12 @@ cairo_pattern_t
 <!-- ##### SECTION Stability_Level ##### -->
 
 
+<!-- ##### TYPEDEF cairo_pattern_t ##### -->
+<para>
+
+</para>
+
+
 <!-- ##### FUNCTION cairo_pattern_create_for_surface ##### -->
 <para>
 
